--- a/frontend/index.html
+++ b/frontend/index.html
@@ -255,7 +255,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://127.0.0.1:5000';
+        const API_BASE_URL = 'https://shopping-cart-web-app-6vz9.onrender.com';
 
         // Load cart when page loads
         document.addEventListener('DOMContentLoaded', function() {
